# datacatalog

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Earthfile  Makefile  README.md  docker-compose.yml  dockerfiles-generator.py  portainer-deploy.py  pyproject.toml  requirements.txt  settings.yaml  shell.nix  template.env  wsgi.py
.github/workflows/: docker.yml
ckanext/ckanext-coat/: .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
ckanext/ckanext-coat/ckanext/coat/: auth.py  blueprint.py  helpers.py  plugin.py
ckanext/ckanext-coat/ckanext/coat/fanstatic/: webassets.yml
ckanext/ckanext-coat/ckanext/coat/logic/: validators.py
ckanext/ckanext-coat/ckanext/coat/logic/action/: create.py  delete.py  get.py  update.py
ckanext/ckanext-coat/ckanext/coat/templates/package/: search.html
ckanext/ckanext-coat/ckanext/coat/tests/: test_plugin.py
ckanext/ckanext-coatcustom/: .gitignore  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py
ckanext/ckanext-coatcustom/ckanext/coatcustom/: coat_dmp_schema.json  coat_org_schema.json  coat_presets.json  coat_protocol_schema.json  coat_schema.json  coat_statevariable_schema.json  helpers.py  nina_dcat_profile.py  plugin.py  validators.py  views.py
ckanext/ckanext-coatcustom/ckanext/coatcustom/assets/: coatcustom.css  webassets.yml
ckanext/ckanext-coatcustom/ckanext/coatcustom/fanstatic/: coatcustom-select2.js  webassets.yml
ckanext/ckanext-coatcustom/ckanext/coatcustom/logic/action/: create.py  update.py
ckanext/ckanext-coatcustom/ckanext/coatcustom/presets/: categories.json  locations.json  names.json  publishers.json  tags.json
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/: base.html  footer.html  header.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/doi/snippets/: resource_citation.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/home/: index.html  layout3.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/home/snippets/: promoted.html  stats.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/package/: base_form_page.html  read.html  read_base.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/package/snippets/: new_package_breadcrumb.html  stages.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/scheming/display_snippets/: embargo.html  multiple_choice.html  multiple_choice_email.html  tag_string.html  visibility.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/scheming/form_snippets/: date.html  embargo.html  multiple_choice_autocomplete.html  organization.html  resource_name.html  tags_autocomplete.html  upload.html  visibility.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/scheming/organization/: about.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/snippets/: facet_list.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/templates/user/: dashboard.html
ckanext/ckanext-coatcustom/ckanext/coatcustom/tests/: test_plugin.py
custom/: ckan-entrypoint.sh  ckan.po  coat-entrypoint-dev.sh  coat-entrypoint.sh  requirements-extra.txt  requirements.txt
dummy/ckan/: add_dependencies.sh  pyproject.toml  setup.py.bak
dummy/psycopg2/: setup.py
nginx/: default.conf.template
scripts/: fix_requirements.sed  gather-requirements.sh  setup-cfg-to-requirements.py  setup-py-to-requirements.py
scripts/taxonomy/: README.md  generate.sql  sync.sh
services/nginx/: default.conf.template
services/pycsw/: Dockerfile  README.md  coat2pycsw.py  pycsw.yml  pyproject.toml
services/report/: pyproject.toml
services/varnish/: default.vcl
settings/: ckan.yaml  docker.yaml
templates/: .env  Dockerfile  ckan-entrypoint-custom.sh  docker-compose.yml
templates/ckan/: .env  Dockerfile  ckan-entrypoint-custom-extra.sh  docker-compose.yml
templates/ckan-entrypoint-custom/: dev
templates/ckan-solr-managed/solr/: Dockerfile  solrconfig.xml
templates/ckan-static/i18n/en/LC_MESSAGES/: ckan.po
templates/ckan-static/i18n/en_ZW/LC_MESSAGES/: ckan.po
templates/ckan/patches/: 100_19e653e75478279b8ae933e0d445956a7949f8f1.patch
tests/: .gitignore  Dockerfile  base.py  docker-compose.yml  pyproject.toml  test_api.py
tools/: ckan.py  docker.py  portainer.py
tools/ckan/: populate.py
tools/docker/: settings.yaml
tools/docker/templates/: Dockerfile  ckan-entrypoint-custom.sh  docker-compose.yml
tools/docker/templates-ckan/: .env  Dockerfile  ckan-entrypoint-custom.sh
tools/docker/templates-ckan/ckan-entrypoint-custom/: dev
tools/docker/templates/ckan-entrypoint-custom/: dev
tools/helpers/: requests.py
tools/portainer/: api.py
utils/: fix_resource_urls.py
utils/fix-resource-urls/: README.md  fix_resource_urls.py  template.env
