[project]
name = "nina-ckan-coat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "ckan_dummy",
    "ckanext-coat",
    "ckanext-coatcustom",
    "ckanext-datasetversions",
    "ckanext-doi",
    "ckanext-oauth2",
    "ckanext-scheming",
    "ckanext-spatial",
    "crudini>=0.9.6",
    "gunicorn>=23.0.0",
]

[tool.uv.workspace]
members = ["dummy/ckan"]

[tool.uv.sources]
ckan_dummy = { workspace = true }
ckanext-coat = { path = "./ckanext/ckanext-coat", editable = true }
ckanext-coatcustom = { path = "./ckanext/ckanext-coatcustom", editable = true }
ckanext-datasetversions = { path = "./ckanext/ckanext-datasetversions", editable = true }
ckanext-doi = { git = "https://github.com/NaturalHistoryMuseum/ckanext-doi.git", tag = "v4.0.4" }
ckanext-oauth2 = { path = "./ckanext/ckanext-oauth2", editable = true }
ckanext-scheming = { git = "https://github.com/COATnor/ckanext-scheming.git", branch = "skip-validation-if-parent" }
ckanext-spatial = { git = "https://github.com/COATnor/ckanext-spatial.git", branch = "coat" }

[tool.uv]
no-build-isolation-package = [
    "ckan",
    "zope-interface",
    "pyproj",
]
override-dependencies = [
    "certifi>=2026",
]

[dependency-groups]
dev = [
    "flask-debugtoolbar>=0.14.1",
]

[tool.setuptools]
packages = []
