[project]
name = "ckan_dummy"
version = "0.1.0"
description = "Extend and replace CKAN dependencies"
requires-python = ">=3.9,<3.10"
dependencies = [
    "alembic==1.0.0",
    "argparse>=1.4.0",
    "babel==2.7.0",
    "beaker==1.11.0",
    "bleach==3.1.4",
    "certifi==2021.5.30",
    "chardet==4.0.0",
    "ckan",
    "ckantoolkit>=0.0.7",
    "click==7.1.2",
    "cython>=3.2.4",
    "dominate==2.4.0",
    "fanstatic==1.1",
    "feedgen==0.9.0",
    "flask==1.1.1",
    "flask-babel==1.0.0",
    "flask-multistatic==1.0",
    "funcsigs==1.0.2",
    "geoalchemy>=0.6",
    "geoalchemy2==0.5.0",
    "idna==2.10",
    "itsdangerous==1.1.0",
    "jinja2==2.10.1",
    "lxml>=2.3",
    "mako==1.1.5",
    "markdown==3.4.1",
    "markupsafe==1.1.1",
    "nose==1.3.7",
    "owslib==0.18.0",
    "passlib==1.6.5",
    "pika>=1.1.0,<1.3.0",
    "polib==1.0.7",
    "psycopg2==2.9.3",
    "pyjwt==1.7.1",
    "pyparsing>=2.1.10",
    "pyproj==2.6.1",
    "pysolr==3.6.0",
    "python-dateutil==2.8.2",
    "python-editor==1.0.4",
    "python-magic==0.4.15",
    "pytz==2016.7",
    "pyutilib==5.7.1",
    "pyyaml==5.4.1",
    "redis==3.5.3",
    "repoze-lru==0.7",
    "repoze-who==2.3",
    "requests>=2.11.1",
    "routes==1.13",
    "rq==1.0",
    "setuptools<46",
    "shapely>=1.2.13,<2.0.0",
    "shutilwhich==1.1.0",
    "simplejson==3.10.0",
    "six>=1.12.0",
    "sqlalchemy==1.3.5",
    "sqlparse==0.3.0",
    "tzlocal==1.3",
    "unicodecsv==0.14.1",
    "urllib3==1.26.6",
    "watchdog==2.1.5",
    "webassets==0.12.1",
    "webencodings==0.5.1",
    "webob==1.8.7",
    "werkzeug[watchdog]==1.0.0",
    "wheel>=0.45.1",
    "zope-interface==4.3.2",
]

[tool.uv]
no-build-isolation-package = [
    "ckan",
    "zope-interface",
    "pyproj",
]
override-dependencies = [
    "certifi>=2026",
    "pyproj>3.0.0,<3.1.0",
]

[tool.uv.extra-build-dependencies]
psycopg2 = ["wheel"]
simplejson = ["wheel"]

[tool.uv.sources]
psycopg2 = { path = "../psycopg2" }
ckan = { git = "https://github.com/ckan/ckan", rev = "ckan-2.9.7" }
