[project]
name = "ckan_dummy"
version = "0.1.0"
description = "Extend and replace CKAN dependencies"
requires-python = ">=3.9,<3.10"
dependencies = [
    "alembic==1.8.1",
    "argparse>=1.4.0",
    "babel==2.10.3",
    "backports-zoneinfo==0.2.1 ; python_full_version < '3.9'",
    "beaker==1.11.0",
    "bleach==5.0.1",
    "blinker==1.5",
    "certifi==2024.7.4",
    "charset-normalizer==2.0.12",
    "ckan",
    "ckantoolkit>=0.0.7",
    "click==8.1.3",
    "cython==0.29.36 ; python_full_version < '3.9'",
    "cython>=3.2.4",
    "deprecated==1.2.13",
    "dominate==2.7.0",
    "feedgen==0.9.0",
    "flask==2.0.3",
    "flask-babel==1.0.0",
    "flask-login==0.6.1",
    "flask-multistatic==1.0",
    "flask-wtf==1.0.1",
    "geojson==3.1.0",
    "greenlet==2.0.2",
    "idna==3.7",
    "importlib-metadata==4.11.4",
    "importlib-resources==6.4.0",
    "itsdangerous==2.1.1",
    "jinja2==3.1.6",
    "lxml==4.9.1",
    "mako==1.2.2",
    "markdown==3.4.1",
    "markupsafe==2.1.1",
    "mypy==0.971",
    "mypy-extensions==0.4.3",
    "nose==1.3.7",
    "owslib==0.31.0 ; python_full_version < '3.10'",
    "owslib==0.32.0 ; python_full_version >= '3.10'",
    "packaging==24.1",
    "passlib==1.7.4",
    "polib==1.1.1",
    "psycopg2==2.9.3",
    "pyjwt==2.4.0",
    "pyparsing==3.1.2",
    "pyproj==2.6.1 ; python_full_version < '3.9'",
    "pyproj==3.6.1 ; python_full_version >= '3.9'",
    "pysolr==3.9.0",
    "python-dateutil==2.8.2",
    "python-magic==0.4.27",
    "pytz==2021.3",
    "pytz-deprecation-shim==0.1.0.post0",
    "pyutilib==6.0.0",
    "pyyaml==6.0.1",
    "redis==4.6.0",
    "requests==2.32.4",
    "rq==1.11.0",
    "setuptools<46",
    "shapely==2.0.7",
    "simplejson==3.17.6",
    "six==1.16.0",
    "sqlalchemy2-stubs==0.0.2a27",
    "sqlalchemy[mypy]==1.4.41",
    "sqlparse==0.5.0",
    "tomli==2.0.1",
    "typing-extensions==4.3.0",
    "tzdata==2022.1",
    "tzlocal==4.2",
    "urllib3==1.26.19",
    "watchdog==2.1.6",
    "webassets==2.0",
    "webencodings==0.5.1",
    "werkzeug[watchdog]==2.0.3",
    "wheel>=0.45.1",
    "wrapt==1.14.0",
    "wtforms==3.0.1",
    "zipp==3.19.1",
    "zope-interface==5.4.0",
]

[tool.uv]
no-build-isolation-package = [
    "ckan",
    "zope-interface",
    "pyproj",
]
override-dependencies = [
    "certifi>=2026",
]

[tool.uv.extra-build-dependencies]
psycopg2 = ["wheel"]
simplejson = ["wheel"]

[tool.uv.sources]
psycopg2 = { path = "../psycopg2" }
ckan = { git = "https://github.com/ckan/ckan", rev = "ckan-2.10.9" }
